#11-PaymentManagement: Add StoryBoard

--- a/WOODLIX/Views/Main.storyboard
+++ b/WOODLIX/Views/Main.storyboard
@@ -573,7 +573,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0ll-a1-7Bj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1356.4885496183206" y="1259.8591549295775"/>
+            <point key="canvasLocation" x="-753" y="1261"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="xlc-Fv-J0u">
@@ -1035,22 +1035,11 @@
                                                 <color key="textColor" name="WhiteColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1qa-1Z-g7C">
-                                                <rect key="frame" x="303" y="0.0" width="50" height="50"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="eWB-TP-6k5"/>
-                                                    <constraint firstAttribute="height" constant="50" id="htj-l8-dMV"/>
-                                                </constraints>
-                                                <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" image="Edit"/>
-                                            </button>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="AUk-hC-d8x"/>
                                             <constraint firstItem="A8k-PT-MqC" firstAttribute="centerY" secondItem="egj-md-AU7" secondAttribute="centerY" id="HzY-Lh-q7d"/>
-                                            <constraint firstAttribute="trailing" secondItem="1qa-1Z-g7C" secondAttribute="trailing" id="KTp-mL-KcV"/>
                                             <constraint firstItem="xmu-hL-pWe" firstAttribute="leading" secondItem="egj-md-AU7" secondAttribute="leading" id="SFj-Xk-3TM"/>
-                                            <constraint firstItem="1qa-1Z-g7C" firstAttribute="centerY" secondItem="egj-md-AU7" secondAttribute="centerY" id="WnV-HY-9Ll"/>
                                             <constraint firstItem="A8k-PT-MqC" firstAttribute="leading" secondItem="xmu-hL-pWe" secondAttribute="trailing" constant="24" id="mzZ-AY-XTi"/>
                                             <constraint firstItem="xmu-hL-pWe" firstAttribute="centerY" secondItem="egj-md-AU7" secondAttribute="centerY" id="qf4-21-xNB"/>
                                         </constraints>
@@ -1245,12 +1234,41 @@
                         <outlet property="beforeListView" destination="z2w-nF-tST" id="bhZ-cd-z5J"/>
                         <outlet property="headerStackView" destination="YYM-Bm-p47" id="ryf-WG-umj"/>
                         <outlet property="ottListView" destination="837-me-0x6" id="hel-Z1-zLX"/>
-                        <outlet property="profileEditButton" destination="1qa-1Z-g7C" id="FMh-LI-Tsm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R7e-9L-R1Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="687.78625954198469" y="1259.8591549295775"/>
+        </scene>
+        <!--Mark View Controller-->
+        <scene sceneID="uFU-Cm-gpd">
+            <objects>
+                <viewController storyboardIdentifier="MarkView" id="NZs-0Z-4Hz" customClass="MarkViewController" customModule="WOODLIX" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="93C-45-Aqe">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="TwN-Z4-z4c"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3ZR-wd-9NA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1407" y="1260"/>
+        </scene>
+        <!--Set Up View Controller-->
+        <scene sceneID="WGy-M3-Khr">
+            <objects>
+                <viewController storyboardIdentifier="SetUpView" id="149-al-Dgw" customClass="SetUpViewController" customModule="WOODLIX" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rdm-VV-RCx">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="KLj-ZP-Fip"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d7j-tF-8Y0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2100" y="1260"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="1je-mm-T6W">
@@ -3158,7 +3176,6 @@
     <resources>
         <image name="Code barre" width="186" height="50"/>
         <image name="Coupon 3" width="24" height="24"/>
-        <image name="Edit" width="24" height="24"/>
         <image name="Home" width="24" height="24"/>
         <image name="PlayButton" width="180" height="180"/>
         <image name="Right" width="24" height="24"/>
